--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React Styleguide Components</title>
+    <style>
+    .styleguide {
+        display: flex;
+    }
+
+    .styleguide header {
+        padding: 20px 20px 20px 0;
+    }
+    .styleguide header ul {
+        list-style: none;
+    }
+    .error{
+        color: red;
+    }
+    </style>
 </head>
 <body>
     <div id="root"></div>
